<resources>
    <string name="app_name">Uni</string>
    <string name="settings">Settings</string>
    <string name="add_a_friend">Add a friend</string>
    <string name="delimiter">/</string>
    <string name="chats">Chats</string>
    <string name="log_in">Log in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="phone_number">Phone number</string>
    <string name="name_cant_be_empty">Name can\'t be empty</string>
    <string name="you_dont_have_any_chats_yet">You don\'t have any chats yet</string>
    <string name="you_dont_have_any_calls_yet">You don\'t have any calls yet</string>
    <string name="or">or</string>
    <string name="edit_phone_number">Edit phone number</string>
    <string name="account">Account</string>
    <string name="new_name">New name</string>
    <string name="new_phone_number">New phone number</string>
    <string name="new_password">New password</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select_image">Select Image</string>
    <string name="profile_photo_updated">Profile photo updated successfully</string>
    <string name="your_name_updated">Name updated successfully</string>
    <string name="profile_image">Profile image</string>
    <string name="sign_out">Sign Out</string>
    <string name="you_sure_you_want_to_sign_out">You sure you want to sign out?</string>
    <string name="yes">Yes, i am sure</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="new_bio">New bio</string>
    <string name="your_bio_updated">Your bio updated</string>
    <string name="bio_cant_be_empty">Bio can\'t be empty</string>
    <string name="message">Message</string>
    <string name="no_friends_available">No friends available</string>
    <string name="no_messages_here_yet">No messages here yet...</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create">Create</string>
    <string name="add_image_profile">Add profile image</string>
    <string name="back_to_login">Back to Log In</string>
    <string name="start_messaging">Start Messaging</string>
    <string name="your_password_updated">Your password updated</string>
    <string name="remember_this_code">Remember this eight-digit code, you need it to recover your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="recovery_code">Recovery code</string>
    <string name="password_recovery">Password recovery</string>
    <string name="recovery_code_cant_be_empty">Recovery code can\'t be empty</string>
    <string name="online">Online</string>
    <string name="info">Info</string>
    <string name="find">Find</string>
    <string name="please_enter_the_phone_number_of_the_person_you_want_to_find">Please enter the phone number of the person you want to find</string>
    <string name="status">Status</string>
    <string name="offline">Offline</string>

    <!--Errors-->
    <string name="incorrect_password">Incorrect password. Please try again</string>
    <string name="this_phone_number_is_already_linked_to_the_account">This phone number is already linked to the account</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="passwords_must_match">Passwords must match</string>
    <string name="error">Something went wrong. Please try again</string>
    <string name="we_couldnt_find_your_account">We couldn\'t find your account. Please try again.</string>
    <string name="we_couldnt_find_this_account">We couldn\'t find this account. Please try again.</string>
    <string name="you_entered_the_wrong_SMS_code_more_than_five_times">You entered the wrong SMS code more than five times. Please try again.</string>
    <string name="the_SMS_quota_for_the_project_has_been_exceeded">The SMS quota for the project has been exceeded. Please try again.</string>
    <string name="phone_number_cant_be_empty">Phone number can\'t be empty</string>
    <string name="password_cant_be_empty">Password can\'t be empty</string>
    <string name="wrong_phone_number_format">Wrong phone number format</string>
    <string name="you_entered_the_wrong_SMS_code">You entered the wrong SMS code. Please try again.</string>
    <string name="invalid_phone_number">Invalid phone number. Please try again.</string>
</resources>