<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?colorBackground"
    tools:context=".fragments.LogInFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/logInFragmentHeader"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="?colorBackground">
        <TextView
            android:id="@+id/logInFragmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/log_in"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize_large"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/logInFragmentPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logInFragmentHeader"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/marginStart_normal"
        android:layout_marginTop="@dimen/marginTop_normal"
        android:layout_marginEnd="@dimen/marginEnd_normal"
        android:background="@drawable/background_edit"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:padding="@dimen/padding_large"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textSize_large" />

    <EditText
        android:id="@+id/logInFragmentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logInFragmentPhoneNumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/background_edit"
        android:layout_marginStart="@dimen/marginStart_normal"
        android:layout_marginTop="@dimen/marginTop_small"
        android:layout_marginEnd="@dimen/marginEnd_normal"
        android:gravity="center"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="@dimen/padding_large"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textSize_large" />

    <TextView
        android:id="@+id/logInFragmentButtonForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logInFragmentPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/marginEnd_normal"
        android:text="@string/forgot_password"
        android:layout_marginTop="@dimen/marginTop_small"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSize_small"
        android:textStyle="bold" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logInFragmentButtonCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logInFragmentButtonForgotPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/marginTop_large"
        android:layout_marginEnd="@dimen/marginEnd_normal"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_check"
        app:borderWidth="@dimen/borderWidth"
        app:elevation="@dimen/elevation"
        app:rippleColor="@color/colorAccent"
        app:tint="@color/colorAccent" />

    <TextView
        android:id="@+id/logInFragmentButtonCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/marginBottom_normal"
        android:text="@string/create_new_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSize_normal"
        android:textStyle="bold" />

</RelativeLayout>