<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?colorBackground"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:clipToPadding="false"
    android:fillViewport="true"
    tools:context=".fragments.SignUpFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/signUpFragmentHeader"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="?colorBackground">
            <TextView
                android:id="@+id/signUpFragmentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_new_account"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textSize_large"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/signUpFragmentImageProfileLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginTop_normal"
            android:layout_below="@id/signUpFragmentHeader">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/signUpFragmentImageProfile"
                android:layout_width="@dimen/profileImage_size"
                android:layout_height="@dimen/profileImage_size"
                android:background="@drawable/background"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/signUpFragmentImageProfileHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_image_profile"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/textSize_small"
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            android:id="@+id/signUpFragmentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUpFragmentImageProfileLayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/marginStart_normal"
            android:layout_marginTop="@dimen/marginTop_normal"
            android:layout_marginEnd="@dimen/marginEnd_normal"
            android:background="@drawable/background_edit"
            android:gravity="center"
            android:hint="@string/name"
            android:imeOptions="actionDone"
            android:inputType="textPersonName|textCapSentences"
            android:padding="@dimen/padding_large"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize_large" />

        <EditText
            android:id="@+id/signUpFragmentPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUpFragmentName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/marginStart_normal"
            android:layout_marginTop="@dimen/marginTop_small"
            android:layout_marginEnd="@dimen/marginEnd_normal"
            android:background="@drawable/background_edit"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:padding="@dimen/padding_large"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize_large" />

        <EditText
            android:id="@+id/signUpFragmentPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit"
            android:layout_below="@id/signUpFragmentPhoneNumber"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/marginStart_normal"
            android:layout_marginTop="@dimen/marginTop_small"
            android:layout_marginEnd="@dimen/marginEnd_normal"
            android:gravity="center"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/padding_large"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize_large" />

        <EditText
            android:id="@+id/signUpFragmentConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUpFragmentPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/marginStart_normal"
            android:layout_marginTop="@dimen/marginTop_small"
            android:layout_marginEnd="@dimen/marginEnd_normal"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:background="@drawable/background_edit"
            android:padding="@dimen/padding_large"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize_large" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/signUpFragmentButtonCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUpFragmentConfirmPassword"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/marginTop_large"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_check"
            app:borderWidth="@dimen/borderWidth"
            app:elevation="@dimen/elevation"
            app:rippleColor="@color/colorAccent"
            app:tint="@color/colorAccent"
            android:layout_marginEnd="@dimen/marginEnd_normal"/>
        <TextView
            android:id="@+id/logInFragmentButtonBackToLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/marginBottom_normal"
            android:text="@string/back_to_login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textSize_normal"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>