<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorBackground"
    tools:context=".activities.AddFriendActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addFriendsActivityHeader"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="?colorBackground">

        <ImageView
            android:id="@+id/addFriendActivityButtonBack"
            android:layout_width="@dimen/buttons_size"
            android:layout_height="@dimen/buttons_size"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back"
            app:tint="@color/colorBlack" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_a_friend"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize_large"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/addFriendActivityFriendPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addFriendsActivityHeader"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/marginStart_normal"
        android:layout_marginTop="@dimen/marginTop_normal"
        android:layout_marginEnd="@dimen/marginEnd_normal"
        android:background="@drawable/background_edit"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:padding="@dimen/padding_large"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textSize_large" />
    <TextView
        android:id="@+id/addFriendActivityFriendPhoneNumberHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_large"
        android:layout_marginEnd="@dimen/marginEnd_large"
        android:layout_below="@id/addFriendActivityFriendPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_small"
        android:text="@string/please_enter_the_phone_number_of_the_person_you_want_to_find"
        android:textColor="@color/colorGray"
        android:gravity="center"/>

    <Button
        android:id="@+id/addFriendActivityButtonFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addFriendActivityFriendPhoneNumberHelp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_normal"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/find" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/addFriendActivityRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addFriendActivityButtonFind"
        android:layout_marginTop="@dimen/marginTop_small"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</RelativeLayout>